Updating redhat scripts to install jenkins on the host